--- a/.github/workflows/django-tests-action.yml
+++ b/.github/workflows/django-tests-action.yml
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/cache@v3
         with:
           path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('.github/workflows/requirements.txt', 'requirements/development.txt') }}
+          key: ${{ runner.os }}-pip-${{ hashFiles('.github/workflows/requirements.txt', 'requirements.txt') }}
           restore-keys: |
             ${{ runner.os }}-pip-
       - name: set PY
@@ -20,5 +20,5 @@ jobs:
           path: ~/.cache/pre-commit
           key: pre-commit|${{ env.PY }}|${{ hashFiles('.pre-commit-config.yaml') }}
       - uses: actions/setup-python@v2
-      - run: python3 -m pip install -r requirements/development.txt
+      - run: python3 -m pip install -r requirements.txt
       - run: python3 manage.py test
