Adding more env var creds

--- a/.github/workflows/django-tests-action.yml
+++ b/.github/workflows/django-tests-action.yml
@@ -25,4 +25,7 @@ jobs:
         run: python3 manage.py test
         env:
           DJANGO_SECRET_KEY: "x#r8^*sj#x)3ixg4f2geyqaj!iyi)#cufw8jw#d(3y%udq2re0"
-          SENDGRID_API_KEY: "foobar"
+          SENDGRID_API_KEY: "test"
+          TWILIO_ACCOUNT_SID: "test"
+          TWILIO_AUTH_TOKEN: "testtoken"
+          # PYTHONBREAKPOINT: "IPython.embed"
