--- a/.github/workflows/django-tests-action.yml
+++ b/.github/workflows/django-tests-action.yml
@@ -25,6 +25,9 @@ jobs:
         run: python3 manage.py migrate
         env:
           DJANGO_SECRET_KEY: "x#r8^*sj#x)3ixg4f2geyqaj!iyi)#cufw8jw#d(3y%udq2re0"
+          SENDGRID_API_KEY: "test"
+          TWILIO_ACCOUNT_SID: "test"
+          TWILIO_AUTH_TOKEN: "testtoken"
       - name: Running django tests
         run: python3 manage.py test
         env:
