Add skip migrations to isort settings to prevent isort trying to format autogenerated files

--- a/.isort.cfg
+++ b/.isort.cfg
@@ -11,3 +11,4 @@ import_heading_localfolder=Local Imports
 known_first_party = dog_questionnaires,questionnaires,export,frontend
 known_django = django
 sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
+skip=migrations
