try to create local.py settings file before running tests in gh actions

--- a/.github/workflows/django-tests-action.yml
+++ b/.github/workflows/django-tests-action.yml
@@ -31,15 +31,16 @@ jobs:
       # into the correct directory and then the tests below should still work.   Also, we can pull in
       # Github Actions secrets for the Twilio and Sendgrid stuff (sandbox/dev account creds) and still
       # manage to test this functionality
-      #- name: create local.py
-      #  run: |
-      #    cat <<EoI >villageline/settings/local.py
-      #    from .settings import *
-      #    SECRET_KEY = ${{ env.DJANGO_SECRET_KEY }}
-      #    ALLOWED_HOSTS = []
-      #    TWILIO_ACCOUNT_SID = ""
-      #    TWILIO_AUTH_TOKEN = ""
-      #    SENDGRID_API_KEY = ""
+      - name: create local.py
+        run: |
+          cat <<EoI > villageline/settings/local.py
+          from .settings import *
+          SECRET_KEY = ${{ env.DJANGO_SECRET_KEY }}
+          ALLOWED_HOSTS = []
+          TWILIO_ACCOUNT_SID = ""
+          TWILIO_AUTH_TOKEN = ""
+          SENDGRID_API_KEY = ""
+          EoI
       - name: Running django migrate
         run: python3 manage.py migrate
       - name: Running django tests
