Final work for dev env via docker
- Add entrypoint script with some initial setup and execute bit
- Make the final docker image the non-slim version in dev so that we
  have the tools needed for debugging
- gitignore the static files directory in root so that we don't commit
  unneeded files
- Add the psycopg2 binary package to base as we should probably prefer
  that data is hosted on a proper RDBMS rather than sqlite
- Tweak local.py.example settings file, add the databases dict with the
  defaults for the local dev env, add some more and alphabetise the
  settings
- Use pathlib and fix the paths which have been broken since moving the
  settings to the new settings directory.

--- a/Dockerfile.local
+++ b/Dockerfile.local
@@ -11,7 +11,7 @@ COPY ./requirements/ ./requirements/
 RUN pip install -r requirements/development.txt
 
 
-FROM python:3.11-slim
+FROM python:3.11
 COPY --from=base /venv /venv
 
 # set environment variables
@@ -20,4 +20,4 @@ ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
 WORKDIR /app
-CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+CMD ["./entrypoint.sh", "dev"]
